@@ -36,5 +36,5 @@
   },
   "author": "Studio Webux S.E.N.C",
   "license": "SEE LICENSE IN license.txt",
-  "gitHead": "d546641f0a88211a52c8d3cee9192299317f0044"
+  "gitHead": "082d290da931b68e91c8478de69c5dfee3a76ab7"
 }
