@@ -37,5 +37,5 @@
     "jsdoc": "^3.6.11",
     "prettier": "^2.8.0"
   },
-  "gitHead": "d546641f0a88211a52c8d3cee9192299317f0044"
+  "gitHead": "082d290da931b68e91c8478de69c5dfee3a76ab7"
 }
